[package]
name = "strict-yaml-rust"
version = "0.1.0"
authors = ["Yuheng Chen <yuhengchen@sensetime.com>", "Francis Lalonde <fralalonde@gmail.com>"]
homepage = "http://fralalonde.github.io/strict-yaml-rust/"
documentation = "https://docs.rs/crate/strict-yaml-rust/"
license = "MIT/Apache-2.0"
description = "A StrictYAML parser obtained by chopping code off the original yaml-rust crate"
repository = "https://github.com/fralalonde/strict-yaml"
# publish = false # this branch contains breaking changes

[dependencies]
linked-hash-map = "0.5"

[dev-dependencies]
quickcheck = "0.7"
